@@ -1,7 +1,7 @@
 ---
 title: Garbage Collection Algorithms
-aliases: [GC Algorithms, Java GC]
-tags: [#java, #gc, #jvm]
+aliases: [GC Algorithms, Java Garbage Collection]
+tags: [#java,#jvm,#gc]
 created: 2025-09-26
 updated: 2025-09-26
 ---
@@ -10,226 +10,163 @@ updated: 2025-09-26
 
 ## Overview
 
-Garbage Collection (GC) is the process of automatically reclaiming memory occupied by objects that are no longer in use. Java provides several GC algorithms that differ in their approach, performance characteristics, and suitability for different application types.
+Garbage Collection (GC) is the process of automatically managing memory by reclaiming space occupied by objects that are no longer in use. The JVM provides several GC algorithms with different trade-offs between throughput, latency, and memory usage. Understanding these algorithms is essential for optimizing Java application performance.
 
 ## Detailed Explanation
 
-### Memory Generations
+### Mark and Sweep
 
-JVM divides heap memory into generations:
+The basic GC algorithm that marks reachable objects and sweeps away unreachable ones.
 
-- **Young Generation**: Where new objects are allocated
-  - Eden Space: Initial allocation
-  - Survivor Spaces (S0, S1): Objects that survive minor GC
-- **Old Generation**: Long-lived objects
-- **Permanent Generation/Metaspace**: Class metadata (Java 8+)
+**Process:**
+1. Mark: Traverse object graph from GC roots, marking reachable objects
+2. Sweep: Reclaim memory from unmarked objects
 
-### GC Algorithms
+**Pros:** Simple implementation
+**Cons:** Fragmentation, stop-the-world pauses
+
+### Mark and Compact
+
+Similar to mark and sweep but compacts surviving objects to reduce fragmentation.
+
+**Process:**
+1. Mark reachable objects
+2. Compact by moving objects to one end of the heap
+
+### Copying Collectors
+
+Divides heap into two spaces: from-space and to-space.
+
+**Process:**
+1. Copy live objects from from-space to to-space
+2. Swap spaces
+
+**Pros:** No fragmentation, fast allocation
+**Cons:** Uses only half the heap
+
+### Generational GC
+
+Exploits the generational hypothesis: most objects die young.
+
+**Generations:**
+- **Young Generation**: New objects, frequent minor GC
+- **Old Generation**: Long-lived objects, infrequent major GC
+- **Permanent Generation/Metaspace**: Class metadata
+
+### Common GC Algorithms
 
 #### Serial GC
-- Single-threaded collector
-- Suitable for small applications
-- Uses mark-sweep-compact algorithm
+Single-threaded, stop-the-world collector. Good for small applications.
+
+```bash
+java -XX:+UseSerialGC MyApp
+```
 
 #### Parallel GC
-- Multi-threaded version of Serial GC
-- Default in Java 8
-- Better for multi-core systems
+Multi-threaded version of Serial GC. Default in Java 8.
+
+```bash
+java -XX:+UseParallelGC MyApp
+```
 
 #### CMS (Concurrent Mark Sweep)
-- Concurrent collection with application threads
-- Low pause times
-- Deprecated in Java 9, removed in Java 14
+Concurrent collection with short pauses. Deprecated in Java 9.
 
 #### G1 (Garbage First)
-- Default since Java 9
-- Divides heap into regions
-- Predictable pause times
+Divides heap into regions, prioritizes regions with most garbage.
 
-#### ZGC and Shenandoah
-- Low-latency collectors
-- Sub-millisecond pause times
-- Suitable for large heaps
-
-### GC Process
-
-```mermaid
-graph TD
-    A[Object Allocation] --> B{Young Generation Full?}
-    B -->|Yes| C[Minor GC]
-    B -->|No| A
-    
-    C --> D[Objects Survive?]
-    D -->|Yes| E[Move to Old Generation]
-    D -->|No| F[Reclaim Memory]
-    
-    E --> G{Old Generation Full?}
-    G -->|Yes| H[Major GC]
-    G -->|No| A
-    
-    H --> I[Compact Heap]
-    I --> A
+```bash
+java -XX:+UseG1GC MyApp
 ```
+
+#### ZGC
+Low-latency collector for large heaps.
+
+```bash
+java -XX:+UseZGC MyApp
+```
+
+#### Shenandoah
+Similar to ZGC, concurrent evacuation.
 
 ## Real-world Examples & Use Cases
 
-- **Web Applications**: G1 GC for predictable response times
-- **Batch Processing**: Parallel GC for throughput
-- **Real-time Systems**: ZGC for low latency requirements
-- **Microservices**: CMS for concurrent collection in containerized environments
-- **Big Data**: Tuning GC for large heap applications
+- **Web Applications**: G1 GC for balanced throughput and latency
+- **Big Data Processing**: Parallel GC for high throughput
+- **Real-time Systems**: ZGC or Shenandoah for low pause times
+- **Embedded Systems**: Serial GC for simple, low-memory applications
 
 ## Code Examples
 
-### Demonstrating GC Behavior
+### GC Monitoring
 
 ```java
-import java.lang.management.GarbageCollectorMXBean;
-import java.lang.management.ManagementFactory;
-import java.util.ArrayList;
-import java.util.List;
-
-public class GCExample {
-    
+public class GCMonitoring {
     public static void main(String[] args) {
-        System.out.println("GC Algorithm Example");
-        
-        // Print current GC algorithms
-        List<GarbageCollectorMXBean> gcBeans = ManagementFactory.getGarbageCollectorMXBeans();
-        for (GarbageCollectorMXBean gcBean : gcBeans) {
-            System.out.println("GC Algorithm: " + gcBean.getName());
-        }
-        
-        // Demonstrate object lifecycle
-        demonstrateObjectLifecycle();
+        Runtime runtime = Runtime.getRuntime();
         
         // Force GC
         System.gc();
-        System.out.println("Explicit GC called");
-    }
-    
-    private static void demonstrateObjectLifecycle() {
-        List<byte[]> objects = new ArrayList<>();
         
-        System.out.println("Creating objects...");
-        for (int i = 0; i < 1000; i++) {
-            // Create objects of varying sizes
-            byte[] obj = new byte[1024]; // 1KB each
-            objects.add(obj);
-            
-            if (i % 100 == 0) {
-                System.out.println("Created " + (i + 1) + " objects");
-            }
-        }
+        // Memory info
+        long totalMemory = runtime.totalMemory();
+        long freeMemory = runtime.freeMemory();
+        long usedMemory = totalMemory - freeMemory;
         
-        // Clear references to make objects eligible for GC
-        System.out.println("Clearing references...");
-        objects.clear();
-        
-        // Suggest GC (doesn't guarantee execution)
-        System.gc();
-        
-        System.out.println("Objects should be garbage collected");
+        System.out.println("Total Memory: " + totalMemory / 1024 / 1024 + " MB");
+        System.out.println("Free Memory: " + freeMemory / 1024 / 1024 + " MB");
+        System.out.println("Used Memory: " + usedMemory / 1024 / 1024 + " MB");
     }
 }
 ```
 
-### Memory Leak Demonstration
+### Object Lifecycle Example
 
 ```java
-import java.util.ArrayList;
-import java.util.List;
-
-public class MemoryLeakExample {
-    
-    private static List<Object> leakList = new ArrayList<>();
-    
+public class ObjectLifecycle {
     public static void main(String[] args) {
-        System.out.println("Memory Leak Demonstration");
+        // Young generation
+        String youngObject = new String("Short-lived");
         
-        Runtime runtime = Runtime.getRuntime();
+        // Method returns, youngObject becomes eligible for GC
+        methodCall();
         
-        for (int i = 0; i < 100000; i++) {
-            // Add objects to a static list (memory leak)
-            leakList.add(new Object());
-            
-            if (i % 10000 == 0) {
-                long usedMemory = runtime.totalMemory() - runtime.freeMemory();
-                System.out.println("Iteration " + i + ", Used Memory: " + usedMemory / 1024 / 1024 + " MB");
-                
-                // Try to trigger GC
-                System.gc();
-            }
-        }
+        // Long-lived object
+        String oldObject = new String("Long-lived");
         
-        System.out.println("Final leak list size: " + leakList.size());
+        // Keep reference to prevent GC
+        System.out.println(oldObject);
     }
-}
-```
-
-### Weak References Example
-
-```java
-import java.lang.ref.WeakReference;
-import java.util.ArrayList;
-import java.util.List;
-
-public class WeakReferenceExample {
     
-    public static void main(String[] args) {
-        System.out.println("Weak Reference Example");
-        
-        // Create a strong reference
-        Object strongRef = new Object();
-        
-        // Create a weak reference to the same object
-        WeakReference<Object> weakRef = new WeakReference<>(strongRef);
-        
-        System.out.println("Strong reference: " + strongRef);
-        System.out.println("Weak reference: " + weakRef.get());
-        
-        // Remove strong reference
-        strongRef = null;
-        
-        // Suggest GC
-        System.gc();
-        
-        // Check if weak reference was cleared
-        System.out.println("After GC - Weak reference: " + weakRef.get());
-        
-        if (weakRef.get() == null) {
-            System.out.println("Object was garbage collected");
-        } else {
-            System.out.println("Object still exists");
-        }
+    private static void methodCall() {
+        String localObject = new String("Local");
+        // localObject eligible for GC after method returns
     }
 }
 ```
 
 ## Common Pitfalls & Edge Cases
 
-- **GC Pauses**: Long pauses affecting application responsiveness
-- **Memory Leaks**: Objects not being collected due to strong references
-- **Heap Fragmentation**: Inefficient memory usage
-- **Incorrect GC Tuning**: Wrong parameters causing performance issues
-- **Finalizer Abuse**: Using finalizers instead of try-with-resources
+- **Memory Leaks**: Holding references to unused objects
+- **GC Pauses**: Long pauses in real-time applications
+- **Heap Sizing**: Incorrect Xmx/Xms settings
+- **Finalizers**: Can cause GC issues, avoid if possible
 
 ## Tools & Libraries
 
-- **GC Tuning Tools**: JVM flags (-XX:+UseG1GC, -Xmx, -Xms)
-- **Monitoring Tools**: JVisualVM, Java Mission Control
-- **Memory Analyzers**: Eclipse MAT, YourKit Java Profiler
-- **GC Log Analyzers**: GCViewer, GCEasy
+- **VisualVM**: GC monitoring and analysis
+- **GCViewer**: Log file analysis
+- **JMC (Java Mission Control)**: Advanced profiling
+- **Async Profiler**: Low-overhead profiling
 
 ## References
 
 - [Oracle GC Tuning Guide](https://docs.oracle.com/javase/8/docs/technotes/guides/vm/gctuning/)
-- [Java Garbage Collection Handbook](https://www.amazon.com/Java-Garbage-Collection-Handbook/dp/1326908454)
-- [Understanding Java GC](https://www.oracle.com/webfolder/technetwork/tutorials/obe/java/gc01/index.html)
+- [JVM GC Algorithms](https://www.oracle.com/technetwork/java/javase/tech/memorymanagement-whitepaper-1-150020.pdf)
+- [G1 GC Paper](https://dl.acm.org/doi/10.1145/1029873.1029874)
 
 ## Github-README Links & Related Topics
 
 - [JVM Internals & Class Loading](../jvm-internals-and-class-loading/README.md)
+- [JVM Performance Tuning](../jvm-performance-tuning/README.md)
 - [Java Memory Management](../java-memory-management/README.md)
-- [GC Tuning](../gc-tuning/README.md)
-- [JVM Performance Tuning](../java/jvm-performance-tuning/README.md)
